# tectonic-texlive-bundles

./: .editorconfig  .gitignore  LICENSE  README.md  build.sh  bundler.sh  driver.sh  make-zipfile.py  select-files.py  shell.nix  staging.sh
builder/: Cargo.toml  Dockerfile
builder/src/: cli.rs  log.rs  main.rs  select.rs
builder/src/pack/: bundlev1.rs  util.rs
builder/src/select/: mod.rs  picker.rs  spec.rs
builder/src/select/input/: dir.rs  mod.rs  tar.rs
bundler-image/: Dockerfile  entrypoint.sh  setup.sh
bundles/: README.md
bundles/full/: bundle.sh  ignored-tex-paths.txt
bundles/texlive2022.0r0/: bundle.sh  ignore
bundles/texlive2023/: bundle.sh  bundle.toml  ignore  search-order
bundles/texlive2023-nopatch/: bundle.sh  ignore
bundles/tlextras/: bundle.toml  classes.txt  formats.txt  ignored-tex-path-prefixes.txt  packages.txt  tl-profile.txt  tlpackages.txt
bundles/unpatched/: bundle.sh  ignore  tl-profile.txt
doc/: bundle.md  formatspec-v1.md  output.md  tests.md
docker/: Dockerfile  entrypoint.sh
docker-image/: Dockerfile  entrypoint.sh  setup.sh
docker-image/scripts/: make-zipfile.py  ttb_utils.py
docker/scripts/: make-zipfile.py
scripts/: get-vendor-pristine.py  install-packages.py  make-installation.py  make-zipfile.py  misc.py  select-files.py  ttb_utils.py
scripts/builder/: Cargo.toml  README.md
scripts/select/: Cargo.toml
scripts/zip2tarindex/: Cargo.toml
tests/: classes.py  formats.py  packages.py  test.sh  test_utils.py
zip2tarindex/: Cargo.toml
zip2tarindex/src/: builder.rs  error.rs  main.rs  pax.rs
(+26 files in other folders)
