[package]
name = "builder"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = { version = "^1.0.19", default-features = false, features = ["zlib"] }
walkdir = "2"
sha2 = "^0.10"
regex = "1.10.2"
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.80"
toml = "^0.7"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
nu-ansi-term = "0.46"
tar = "0.4.40"
